apps/arr/prowlarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${INTERNAL_INGRESS_CLASS}
  tls:
    - hosts:
        - "prowlarr.${INTERNAL_DOMAIN}"
      secretName: "prowlarr-tls"
  rules:
    - host: "prowlarr.${INTERNAL_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
